# MoonRunes

./: .gitignore  Cargo.toml  README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/kaanb/moonrunes/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/kaanb/moonrunes/: AboutActivity.kt  DecompressDictionaries.kt  MainActivity.kt  MoonRunesApplication.kt
app/src/main/java/com/kaanb/moonrunes/dao/: DictionaryDao.kt
app/src/main/java/com/kaanb/moonrunes/dictionary/dao/: DictionaryDatabase.kt  DictionaryRawQueries.kt  KangxiRadicals.kt  KanjiDicTypes.kt
app/src/main/java/com/kaanb/moonrunes/dictionary/di/: DictionaryModule.kt
app/src/main/java/com/kaanb/moonrunes/dictionary/repository/: AudioRepository.kt  DictionaryRepository.kt
app/src/main/java/com/kaanb/moonrunes/dictionary/screen/: DictionaryEntryScreen.kt  DictionarySearchScreen.kt  FlashCardScreen.kt  KanjiEntryScreen.kt  TwoPaneDictionaryList.kt  TwoPaneFavoritesList.kt  WotdScreen.kt
app/src/main/java/com/kaanb/moonrunes/dictionary/service/: AudioService.kt  WotdService.kt
app/src/main/java/com/kaanb/moonrunes/dictionary/ui/: AlternateReading.kt  DetailedDictionaryEntryInfo.kt  Dictionary.kt  DrawerSheet.kt  MeaningEntry.kt  Priority.kt
app/src/main/java/com/kaanb/moonrunes/dictionary/usecase/: FavoriteDictionaryEntryUseCase.kt  GetDictionaryEntryByIdUseCase.kt  GetKanjiDicEntryUseCase.kt  SearchAndFormatDictionaryEntriesUseCase.kt
app/src/main/java/com/kaanb/moonrunes/dictionary/util/: DecompressDictionaries.kt  DictionaryEntry.kt  EntryOrdering.kt  KanjiDicEntry.kt  KanjiStrokeRenderer.kt  KanjiStrokes.kt  PlayAudio.kt  (+1 more)
app/src/main/java/com/kaanb/moonrunes/navigation/: NavigationRoot.kt  Routes.kt
app/src/main/res/drawable/: arrow_right_alt.xml  ic_launcher_foreground.xml
app/src/main/res/layout/: activity_about.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-en/: strings.xml
app/src/main/res/values-tr/: strings.xml
app/src/test/java/com/kaanb/moonrunes/: ExampleUnitTest.kt  KanjiStrokeRenderer.kt
dictionaries/: .gitignore
dictionaries/dictionary_to_sqlite/: .gitignore  Cargo.toml  build.rs  build.sh  create_indexes.sql  create_tables.sql  create_tables_duckdb.sql  radkfile  sqlite2duckdb.py
dictionaries/dictionary_to_sqlite/src/: main.rs
fsrs_jni/: Cargo.toml  build.gradle.kts
fsrs_jni/src/: lib.rs
fsrs_jni/src/androidTest/java/com/kaanb/fsrs_jni/: ExampleInstrumentedTest.kt
fsrs_jni/src/main/java/com/kaanb/fsrs_jni/: FsrsJni.kt
fsrs_jni/src/test/java/com/kaanb/fsrs_jni/: NativeLibraryTest.kt
fsrs_jni_rs/: Cargo.toml  build.sh  build_laptop.sh  build_pc.sh
fsrs_jni_rs/src/: lib.rs
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
server/: Cargo.toml  config.toml
server/src/: audio_cache.rs  main.rs
wotd_server/: Cargo.toml
wotd_server/src/: main.rs
(+51 files in other folders)
