[package]
name = "fsrs_jni"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["std", "clock", "serde"] }
fsrs = "5.2.0"
itertools = "0.14.0"
jni = "0.22.4"
rand = "0.10.0"
rkyv = "0.8.15"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
uuid = "1.23.0"
