[package]
name = "wotd_server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.9"
chrono = { version = "0.4.44", features = ["std", "clock", "serde"] }
infer = "0.19.0"
kuchikiki = "0.8.2"
reqwest = "0.13.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.52.1", features = ["full"] }
toml = "1.1.2"
tracing-subscriber = "0.3.23"
