[package]
name = "dictionary_to_sqlite"
version = "0.1.0"
edition = "2024"

[dependencies]
duckdb = { version = "1.4.4", features = ["bundled"] }
quick-xml = { version = "0.39.0", features = ["serialize"] }
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde-xml-rs = "0.8.2"
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.49.0", features = ["full"] }
xmlity = { version = "0.0.9", features = ["derive"] }
xmlity-quick-xml = "0.0.9"
