[package]
name = "dictionary_to_sqlite"
version = "0.1.0"
edition = "2024"

[dependencies]
quick-xml = { version = "0.39.0", features = ["serialize"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.49.0", features = ["full"] }
wana_kana = "4.0.0"
