[package]
name = "dictionary_to_sqlite"
version = "0.1.0"
edition = "2024"

[dependencies]
quick-xml = { version = "0.39.0", features = ["serialize"] }
usvg = "0.43.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.49.0", features = ["full"] }
wana_kana = "4.0.0"
encoding_rs = "0.8"

[build-dependencies]
flate2 = "1.1.9"
reqwest = { version = "0.13.3", features = ["blocking"] }
zip = "8.6.0"
zip-extensions = "0.14.1"
